--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-prost = "0.11.0"
-prost-types = "0.11.1"
+prost = "0.11.3"
+prost-types = "0.11.2"
 chrono = "0.4.22"
-base64 = "0.13.0"
+base64 = "0.13.1"
 base64-url = "1.4.13"
-openssl = "0.10.42"
+openssl = { version = "0.10.43", optional = true }
 hex = "0.4.3"
 
 [build-dependencies]
-prost-build = { version = "0.11.0"}
+prost-build = { version = "0.11.3"}
+
+[features]
+crypto_openssl = ["openssl"]
