--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-prost = "0.11.3"
-prost-types = "0.11.2"
+prost = "0.11.7"
+prost-types = "0.11.7"
 chrono = "0.4.22"
-base64 = "0.13.1"
+base64 = "0.21.0"
 base64-url = "1.4.13"
 openssl = { version = "0.10.43", optional = true }
 hex = "0.4.3"
+p12 = { version = "0.6.3", optional = true }
+ed25519 = { version="2.1.0", optional = true }
+ed25519-dalek = {version="1.0.1", optional = true }
 
 [build-dependencies]
-prost-build = { version = "0.11.3"}
+prost-build = { version = "0.11.7"}
 
 [features]
 crypto_openssl = ["openssl"]
+crypto_rustcrypto = ["p12", "ed25519", "ed25519-dalek"]
