--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "rust-analyzer.cargo.features": [
-        "crypto_openssl"
-    ]
+        "wasm"
+    ],
+    "rust-analyzer.showUnlinkedFileNotification": false
 }
